# advanced-telegram-bots

./: .gitignore  README.md
04_Testing/01_Testing_handlers/: README.md  requirements.txt
04_Testing/03_Testing_FSM/: README.md  settings.example.yml
04_Testing/04_Testing_DB/: README.md  alembic.ini  docker-compose.yml  requirements.txt  settings.example.yml
08_Databases/01-sqlalchemy-core/: README.md  config.example.yml  docker-compose.example.yml  (+1 more)
09_Template/: LICENSE  config.py  docker-compose.yaml  pyproject.toml  secrets.toml.example  settings.toml
09_Template/I18N/: __init__.py  factory.py
09_Template/I18N/locales/: en.ftl  ru.ftl
09_Template/bot/: __init__.py  config.py  send_done_photos.py
09_Template/bot/handling/: schema.py
09_Template/bot/handling/dialogs/: __init__.py
09_Template/bot/handling/filters/: __init__.py  chat_type.py
09_Template/bot/handling/handlers/: __init__.py  start.py
09_Template/bot/handling/middlewares/: __init__.py  logging.py
09_Template/bot/handling/states/: watermark.py
09_Template/bot/nats_storage/: entry.py
09_Template/bot/payload/: convert_task.py
09_Template/bot/tests/: conftest.py  mocked_aiogram.py  pytest.ini  test_start.py
09_Template/database/config/orm/: engine.py  mixin.py
09_Template/database/models/: __init__.py  users.py
09_Template/img-converter/: Dockerfile
09_Template/logs/: __init__.py  startup.py
09_Template/nats/: migration.py  nats.conf  pyproject.toml
10_Template/: .gitignore  README.md  alembic.ini  app.py
10_Template/img-converter/: README.md  app.py  pyproject.toml
(+98 files in other folders)
